# CE-GY-7893-Engineering-Applications-of-Deep-Learning-Examples

./: .gitignore  README.md  main.py  pyproject.toml
examples/: Untitled.md  linear_regression_usa_housing.ipynb  linear_regression_usa_housing.py  spam_detection_logistic_regression.ipynb  spam_detection_logistic_regression.py
